# idk

./: .env  .gitignore  docker-compose.yml  main.py  package.json  pyproject.toml  schema.prisma  settings.py  tsconfig.json
api/: models.py
api/categories/: routes.py
api/categories/models/: __init__.py  base.py  category.py  category_post.py
api/posts/: routes.py
api/posts/models/: __init__.py  base.py  mixins.py  post.py
api/users/: routes.py
api/users/models/: __init__.py  signin.py  signup.py  user.py  user_post.py
migrations/20221212131709_init/: migration.sql
migrations/20221214014455_init/: migration.sql
static/css/: auth.css  auth.less  global.css  global.less  lk.css  lk.less  nav.css  nav.less  notification.css  notification.less  post.css  post.less  style.css  style.css.map  style.less
static/js/: auth.js  lk.js  main.js  throwError.js
static/js/components/: PostCard.js  createPost.js  notification.js
static/scripts/: auth.ts  lk.ts  main.js  main.ts  throwError.ts
static/scripts/components/: PostCard.js  PostCard.ts  createPost.js  createPost.ts  notification.ts
templates/: auth.html  index.html  lk.html
