[tool.poetry]
name = "idk"
version = "0.1.0"
description = ""
authors = ["Руслан Мельник <melnk300@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
prisma = "^0.7.1"
flask = {extras = ["async"], version = "^2.2.2"}
flask-pydantic = "^0.11.0"
flask-socketio = "^5.3.2"
flask-jwt = "^0.3.2"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
